force-app/force-app/force-app/main/default/objects/Sales_Plan_Budget_Review__c/Sales_Plan_Budget_Review__c.object-meta.xml
<CustomObject>
    <label>Sales Plan-Budget Review</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Sales Plan-Budget Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plan-Budget Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>