force-app/force-app/force-app/main/default/objects/Sales_Plan_Budget_Review__c/fields/CTC_for_the_month__c.field-meta.xml
<CustomField>
    <fullName>CTC_for_the_month__c</fullName>
    <label>CTC for the month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>