force-app/force-app/force-app/main/default/objects/Sales_Plan_Budget_Review__c/fields/CTC_to_Sales_Ratio__c.field-meta.xml
<CustomField>
    <fullName>CTC_to_Sales_Ratio__c</fullName>
    <formula>CTC_for_the_month__c / Sales_for_the_Month__c</formula>
    <label>CTC to Sales Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>