force-app/force-app/force-app/main/default/objects/Sales_Plan_Budget_Review__c/fields/Exp_Budget_To_Sales_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Exp_Budget_To_Sales_Ratio__c</fullName>
    <formula>Total_Exp_Budget_Planned__c /  Sales_Target_for_the_Month__c</formula>
    <label>Exp Budget To Sales Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>