force-app/force-app/force-app/main/default/objects/Sales_Plan_Budget_Review__c/fields/Sales_Target_for_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target_for_the_Month__c</fullName>
    <label>Sales Target for the Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>