force-app/force-app/force-app/main/default/objects/Sales_Plan_Budget_Review__c/fields/Target_Total_Exp_to_Sales_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Target_Total_Exp_to_Sales_Ratio__c</fullName>
    <formula>Exp_Budget_To_Sales_Ratio__c  +  CTC_to_Sales_Ratio__c</formula>
    <label>Target -Total Exp to Sales Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>