force-app/force-app/force-app/main/default/objects/Sales_Plan_Budget_Review__c/fields/Total_Exp_Budget_Planned__c.field-meta.xml
<CustomField>
    <fullName>Total_Exp_Budget_Planned__c</fullName>
    <label>Total Exp Budget Planned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>