force-app/force-app/force-app/main/default/objects/Sales_Plan_Budget_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Executive__c</columns>
    <columns>Actual_Exp_for_the_month__c</columns>
    <columns>Sales_for_the_Month__c</columns>
    <columns>Sales_Target_for_the_Month__c</columns>
    <columns>Target_Total_Exp_to_Sales_Ratio__c</columns>
    <columns>Total_Exp_Budget_Planned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>